[#74] Fix landscape layout on IE Mobile.

--- a/www/css/app.less
+++ b/www/css/app.less
@@ -79,7 +79,6 @@ hr {
 .wide-screen() {
 
     .container {
-        width: 700px;
         margin: 0 auto;
     }
 }
